--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,2 +1,13 @@
-SQLALCHEMY_DATABASE_URI = 
-JWT_SECRET_KEY = 
+SQLALCHEMY_DATABASE_URI = 'sqlite:///quizmaster.db'
+JWT_SECRET_KEY = 'super-secret-key'
+
+# SMTP MAIL SERVER CREDS
+MAIL_SERVER = 'smtp.gmail.com'
+MAIL_PORT=587
+MAIL_USERNAME=youremail
+MAIL_PASSWORD = 'yourpassword'
+MAIL_DEFAULT_SENDER=youremail
+
+# ADMIN CREDS
+ADMIN_EMAIL=adminemail
+ADMIN_PASSWORD=adminpass
